--- a/assets/scss/components/_logo.scss
+++ b/assets/scss/components/_logo.scss
@@ -10,6 +10,12 @@
     width: auto;
   }
 }
+
+.logo a span{
+  font-size: 32px;
+  padding-left: 14px;
+  vertical-align: middle;
+}
 .logo-mobile {
   display: block;
   @include media-breakpoint-up(sm) {
